--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "chart.js": "^2.9.4",
     "date-fns": "^2.16.1",
     "next": "10.0.5",
     "prop-types": "^15.7.2",
